test/spec_vectors/global/fail/module_33.wat
(module (func (i32.const 0) (global.set 0)))